fixed button text alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -1016,7 +1016,6 @@ span {
   margin: 5em 10em;
 }
 .register button {
-  padding: 1.5em;
   display: flex;
   align-items: center;
   justify-content: center;
